--- a/templates/djapp/add.html
+++ b/templates/djapp/add.html
@@ -1,3 +1,5 @@
+{% extends 'djapp/base.html' %}
+
 <!DOCTYPE html>
 <html lang="en">
 
@@ -9,11 +11,17 @@
 </head>
 
 <body>
+    {% block title_block %}
+    <h1>Student Form</h1>
+    {% endblock %}
+    {% block main_block %}
     <form action="" method="post">{% csrf_token %}
         {{ st_form.as_p}}
         <button type="submit">Save</button>
         <button type="reset">Clear</button>
     </form>
+    {% endblock %}
+
 </body>
 
 </html>
