--- a/templates/djapp/base.html
+++ b/templates/djapp/base.html
@@ -8,9 +8,24 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <title>Document</title>
+    <style>
+        h1 {
+            text-align: center;
+
+        }
+    </style>
 </head>
 
 <body>
+    {% include 'djapp/header.html' %}
+    <div class="container">
+        {% block title_block %}
+        {% endblock %}
+        {% block main_block %}
+        {% endblock %}
+    </div>
+    {% include 'djapp/footer.html' %}
+
 
 </body>
 
