--- a/templates/djapp/home.html
+++ b/templates/djapp/home.html
@@ -1,3 +1,5 @@
+{% extends 'djapp/base.html' %}
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 
@@ -9,12 +11,20 @@
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>Document</title>
+
 </head>
 
-<body style="text-align: center; padding: 30px">
+<body>
+
+
+    {% block title_block %}
 
     <h1>All Students</h1>
     <a class="btn btn-success m-3" href="{% url 'add' %}">Add Student</a>
+    <img src="{% static 'img/user.png' %}" alt="image" width="100px" height="100px" style="margin-bottom: 10px;">
+    {% endblock %}
+
+    {% block main_block %}
     <table class="table table-success table-bordered" style="border: 1px;">
 
         <thead>
@@ -51,6 +61,9 @@
         </tbody>
 
     </table>
+    {% endblock %}
+
+
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
