--- a/templates/djapp/show.html
+++ b/templates/djapp/show.html
@@ -1,3 +1,5 @@
+{% extends 'djapp/base.html' %}
+
 <!DOCTYPE html>
 <html lang="en">
 
@@ -12,8 +14,10 @@
 </head>
 
 <body style="text-align: center; padding: 30px">
-
+    {% block title_block %}
     <h1>Student Details</h1>
+    {% endblock %}
+    {% block main_block %}
     <div class="card   " style="font-size: 25px;background-color: rgb(194, 236, 222);">
         <div class="card-header">Name:
 
@@ -29,6 +33,9 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
         crossorigin="anonymous"></script>
+    {% endblock %}
+
+
 </body>
 
 </html>
