adding signup, login and signout

--- a/templates/djapp/add.html
+++ b/templates/djapp/add.html
@@ -19,6 +19,7 @@
         {{ st_form.as_p}}
         <button type="submit">Save</button>
         <button type="reset">Clear</button>
+        <a href="">Delete</a>
     </form>
     {% endblock %}
 
