--- a/templates/djapp/show.html
+++ b/templates/djapp/show.html
@@ -30,6 +30,7 @@
         </div>
     </div>
     <a class="btn btn-warning m-3 p-2" style="font-size: 25px;" href="{% url 'home' %}">Back</a>
+    <a class="btn btn-danger mx-2" href="{% url 'delete' student.id %}">Delete</a>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
         crossorigin="anonymous"></script>
