--- a/templates/djapp/login.html
+++ b/templates/djapp/login.html
@@ -16,14 +16,15 @@
             margin: 0;
             padding: 0;
             height: 100%;
-            background: #7abecc !important;
+            background: black !important;
+            color: white !important;
         }
 
         .user_card {
             width: 350px;
             margin-top: auto;
             margin-bottom: auto;
-            background: #74cfbf;
+            background: #14332e;
             position: relative;
             display: flex;
             justify-content: center;
@@ -47,7 +48,7 @@
 
         .login_btn {
             width: 100%;
-            background: #33ccff !important;
+            background: black !important;
             color: white !important;
         }
 
@@ -74,7 +75,7 @@
         }
 
         #messages {
-            background-color: grey;
+            background-color: white;
             color: #fff;
             padding: 10px;
             margin-top: 10px;
