--- a/templates/djapp/signup.html
+++ b/templates/djapp/signup.html
@@ -15,14 +15,15 @@
             margin: 0;
             padding: 0;
             height: 100%;
-            background: #7abecc !important;
+            background: black !important;
+            color: white !important;
         }
 
         .user_card {
             width: 350px;
             margin-top: auto;
             margin-bottom: auto;
-            background: #74cfbf;
+            background: #14332e;
             position: relative;
             display: flex;
             justify-content: center;
@@ -45,7 +46,7 @@
 
         .login_btn {
             width: 100%;
-            background: #33ccff !important;
+            background: black !important;
             color: white !important;
         }
 
